feat: plugin poc for spring